# sysint

./: .gitignore  README.md  output.csv  output.json  output.xml  pyproject.toml
00/python_solution/: main.py
00/rust_solution/: Cargo.toml  output.json  output.txt  output.yaml
00/rust_solution/src/: main.rs  test.json  test.xml
01/rust_solution/: Cargo.toml
01/rust_solution/src/: main.rs
01a/python_solution/: file_service.py  main.py  pyproject.toml
01a/python_solution/files/: pokemon.csv  pokemon.xml  pokemon.yaml
01a/rust_solution/: Cargo.toml  main  output.csv  output.xml
01a/rust_solution/src/: main.rs  test.csv  test.txt  test.yaml
01a/rust_solution/src/dtos/: mod.rs
01a/rust_solution/src/service/: file_service.rs
01a/rust_solution/src/static/files/: pokemon.csv  pokemon.txt
02_Data/hand_in/: .pre-commit-config.yaml  README.md  pyproject.toml
02_Data/hand_in/deploy/: Dockerfile  docker-compose.dev.yml  docker-compose.yml
02_Data/hand_in/hand_in/: __init__.py  __main__.py  conftest.py  settings.py
02_Data/hand_in/hand_in/services/: __init__.py  file_service.py
02_Data/hand_in/hand_in/static/files/: pokemon.yaml
02_Data/hand_in/hand_in/tests/: __init__.py
02_Data/hand_in/hand_in/web/: __init__.py  application.py
02_Data/hand_in/hand_in/web/api/: __init__.py  router.py
02_Data/hand_in/hand_in/web/api/file/: __init__.py  views.py
02_Data/hand_in/hand_in/web/api/monitoring/: __init__.py
02_Data/hand_in/hans_in/: __init__.py  __main__.py  conftest.py  settings.py
02_Data/hand_in/hans_in/services/: __init__.py
02_Data/hand_in/hans_in/tests/: __init__.py
02_Data/hand_in/hans_in/web/: __init__.py  application.py
02_Data/hand_in/hans_in/web/api/: __init__.py  router.py
03a_Data_parsing_server/hand_in/: Cargo.toml
03a_Data_parsing_server/hand_in/src/: main.rs
03a_Data_parsing_server/hand_in/src/dtos/: pokemon_dtos.rs  response_dto.rs
03a_Data_parsing_server/hand_in/src/handlers/: external.rs  files.rs  mod.rs
03a_Data_parsing_server/hand_in/src/service/: file_service.rs
03a_Data_parsing_server/hand_in/src/static/files/: pokemon.yaml
04_real_time_communicaton_part_II/Database/: README.html  README.md
04_real_time_communicaton_part_II/Database/dbdoc/: README.md  public.accounts.md  public.tranction_view.md  public.transactions.md  public.users.md  schema.json
04_real_time_communicaton_part_II/Database/exposee/: init.sql  variables.tf
04_real_time_communicaton_part_II/Database/exposer/: init.sql  main.tf  plan
04_real_time_communicaton_part_II/Database/integrator/: feedback.md
04_real_time_communicaton_part_II/SSE_example/sse_example/: Cargo.toml
04_real_time_communicaton_part_II/SSE_example/sse_example/src/: main.rs
04_real_time_communicaton_part_II/SSE_example/sse_example/src/dtos/: mod.rs  pokemon_dtos.rs  response_dto.rs
04_real_time_communicaton_part_II/SSE_example/sse_example/src/handlers/: external.rs  files.rs  mod.rs  sse.rs
04_real_time_communicaton_part_II/SSE_example/sse_example/src/service/: file_service.rs
04_real_time_communicaton_part_II/SSE_example/sse_example/src/static/files/: pokemon.json  pokemon.txt  pokemon.xml  pokemon.yaml
05a_webhook/: Dockerfile  README.md  db.py  main.py  notifications.py  pyproject.toml  test.db  urls.db
05a_webhook/client/: Dockerfile  app.js  package-lock.json  package.json
05a_webhook/client/public/: index.html
05a_webhook/deploy/: main.tf  plan
05a_webhook/deploy_client/: main.tf  plan  provider.tf  variables.tf
06_server/python_implementation/: main.py  pyproject.toml
06a_websockets/: pyproject.toml
08_server_to_server/node/: app.js  package-lock.json  package.json
08_server_to_server/python/: main.py  pyproject.toml
08a_document_a_database/: README.md  tbls.yaml
08a_document_a_database/dbdoc/: README.md  public.ability.md  public.ability_type.md  public.attribute.md  public.audit_log.md  public.base_class.md  public.base_user.md  public.character.md  public.character_attribute.md  public.character_details_view.md  public.character_location.md  public.class_ability.md  public.place.md  public.relation.md  schema.json
08b_migrations/: README.md
08b_migrations/simple/: alembic.ini  docker-compose.yml  main.py  models.py  pyproject.toml  sqlite.db
08b_migrations/simple/alembic/: README  env.py
08b_migrations/simple/alembic/versions/: 32506dbefa5d_add_data.py  421b50e0a6c5_migrate_to_postgresl.py  51d76961fc8e_first_commit.py
08b_migrations/simple/migrations/versions/: 93a588fe205e_create_a_baseline_migrations.py  bde09e2ec325_create_a_baseline_migrations.py
08c_auth_integration/: README.md
08c_auth_integration/01-login-vue/: auth_config.json
09a_documentation_dls_project/: README.md
10_date/node/: index.js
10_date/python_impl/: main.py
10_date/rust_implt/hi/: Cargo.toml
10_date/rust_implt/hi/src/: main.rs
10_date/rust_implt/hi/src/static/: index.html
10a/: db.py  main.py  schema.py  students.db
10a_GraphQL/: README.md  models.py  pyproject.toml
10a_real/: README.md  books.db  db.py  main.py  models.py  pyproject.toml  schema.py
10a_real/resolvers/: mutations.py  queries.py
10b_Payment/: main.py  pyproject.toml
11_short_polling/node/: app.js
13_sse/python_sse/: main.py  pyproject.toml
13_sse/python_sse/templates/: index.html
15_github_webhooks/node-webhook/: app.js  package-lock.json  package.json
15_github_webhooks/python-webhooks/: main.py  pyproject.toml
6a_websockets/: connection_manager.py  main.py
_01a/python_solution/: bla.py  main.py
(+1 files in other folders)
