[tool.poetry]
name = "6a-websockets"
version = "0.1.0"
description = ""
authors = ["Moshizzl3 <81045658+Moshizzl3@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "6a_websockets"}]

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
