[tool.poetry]
name = "python-solution"
version = "0.1.0"
description = ""
authors = ["Moshizzl3 <81045658+Moshizzl3@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "python_solution"}]

[tool.poetry.dependencies]
python = "^3.11"
pandas = "^2.2.2"
elementpath = "^4.4.0"
pyyaml = "^6.0.1"
lxml = "^5.2.2"
pydantic = "^2.7.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
