[package]
name = "sse_example"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
cargo-watch = "8.5.2"
env_logger = "0.11.2"
serde = "1.0.195"
serde_json = "1.0.111"
csv = "1.1"
serde_yaml = "0.8"
serde-xml-rs = "0.6.0"
reqwest = { version = "0.11.24", features = ["json"] } 
utoipa = { version="4.2.0", features = ["actix_extras"]}
utoipa-swagger-ui = {version="6.0.0", features=["actix-web"]}